<resources>
    <string name="app_name">Keller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="last_server_ping_str">Last server ping</string>
    <string name="ping_time_str">10 min ago</string>
    <string name="refresh_text">Button to refresh the connection to server.</string>
    <string name="server_details">Server Details</string>
    <string name="connected">Connected to</string>
    <string name="server_url">http://server.heroku.com/path1/path2</string>
    <string name="connected_icon">Connected Icon</string>
    <string name="calendar">Calendar</string>
    <string name="calendar2">Calendar2</string>
    <string name="home">Home</string>
    <string name="import_calendar">Import Calendar</string>
    <string name="themes">Themes</string>
    <string name="config">Config</string>
    <string name="settings">Settings</string>
    <string name="dummy_home_text">You have no next scheduled events. Currently, its sunny, but you will need your umbrella later.</string>
    <string name="weather_image">Weather Image</string>
    <string name="dummy_weather_temp">36</string>
    <string name="degree_fahrenheit">°F</string>
    <string name="degree_celcius">°C</string>
    <string name="now">Now</string>
    <string name="next_event">Next Event</string>
    <string name="time">TIME</string>
    <string name="around">Around</string>
    <string name="updated_at">Updated At</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="title_activity_add_event">Add Event</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="event_title">Event Title</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="notifications">Notifications</string>
    <string name="weather">Weather</string>
    <string name="enter_api_url_here">Enter API URL Here</string>
    <string name="server">Server URL</string>
    <string name="recurrence">Recurrance</string>
    <string name="splash">splash</string>
    <string-array name="recurrent_list">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
</resources>
