<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/action_home_bottom">

    <fragment
        android:id="@+id/action_home_bottom"
        android:name="com.friday.keller2.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/action_weather_bottom"
        android:name="com.friday.keller2.ui.weather.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/action_config_bottom"
        android:name="com.friday.keller2.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/action_calendar2_bottom"
        android:name="com.friday.keller2.ui.calendar2.Calendar2"
        android:label="@string/calendar"
        tools:layout="@layout/calendar2_fragment" />
</navigation>