<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageButton
        android:id="@+id/footer_refresh_button"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="48sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/refresh_text"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footer_server_url_text"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_refresh" />

    <ImageView
        android:id="@+id/footer_connected_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/connected_icon"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/footer_connection_status_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/footer_connection_status_text"
        app:layout_constraintTop_toTopOf="@+id/footer_connection_status_text"
        app:srcCompat="@drawable/ic_check" />

    <ImageView
        android:id="@+id/footer_disconnected_icon"
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/connected_icon"
        android:tint="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/footer_connection_status_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/footer_connection_status_text"
        app:layout_constraintTop_toTopOf="@+id/footer_connection_status_text"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/footer_server_details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/server_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/footer_connection_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/connected"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/footer_server_details_text"
        app:layout_constraintStart_toEndOf="@+id/footer_server_details_text"
        app:layout_constraintTop_toTopOf="@+id/footer_server_details_text" />

    <TextView
        android:id="@+id/footer_ping_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/ping_time_str"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/footer_refresh_button"
        app:layout_constraintEnd_toStartOf="@+id/footer_refresh_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footer_refresh_button" />

    <TextView
        android:id="@+id/text_last_ping_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/last_server_ping_str"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/footer_ping_time_text"
        app:layout_constraintEnd_toStartOf="@+id/footer_ping_time_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footer_ping_time_text" />

    <TextView
        android:id="@+id/footer_server_url_text"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/server_url"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#BDBCBC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/footer_refresh_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/footer_server_details_text"
        app:layout_constraintTop_toBottomOf="@+id/footer_connected_icon"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
