<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_event_layout_back"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100sp"
    android:layout_marginBottom="4sp"
    android:layout_marginLeft="8sp"
    android:layout_marginRight="8sp"
    android:layout_marginTop="4sp"
    android:background="@drawable/notif_bg">

    <TextView
        android:id="@+id/add_event_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/event_title"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/add_event_start_time"
        app:layout_constraintEnd_toStartOf="@+id/add_event_start_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_event_start_time" />

    <TextView
        android:id="@+id/add_event_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_time"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_event_weather_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_event_weather_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/add_event_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/end_time"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/add_event_weather_view"
        app:layout_constraintEnd_toEndOf="@+id/add_event_start_time"
        app:layout_constraintEnd_toStartOf="@+id/add_event_weather_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/add_event_start_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/add_event_weather_view"
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_margin="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_event_event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/add_event_event_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/add_event_event_title"
        app:layout_constraintTop_toBottomOf="@+id/add_event_event_title" />
</androidx.constraintlayout.widget.ConstraintLayout>