<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/now_weather_icon"
        android:layout_width="0sp"
        android:layout_height="0sp"

        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/weather_image"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/now_weather_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/now_weather_title"
        app:layout_constraintTop_toBottomOf="@+id/now_weather_title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_cloud" />

    <ImageView
        android:id="@+id/next_weather_icon"
        android:layout_width="0sp"

        android:layout_height="0sp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/weather_image"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_weather_text"
        app:layout_constraintStart_toStartOf="@+id/now_weather_icon"
        app:layout_constraintTop_toBottomOf="@+id/next_weather_title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_cloud" />

    <TextView
        android:id="@+id/time_updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/updated_at"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/now_weather_title"
        app:layout_constraintEnd_toStartOf="@+id/updated_time"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/now_weather_title"
        app:layout_constraintTop_toTopOf="@+id/now_weather_title" />

    <TextView
        android:id="@+id/now_weather_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/now"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/now_weather_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:text="@string/dummy_weather_temp"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/now_weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/now_weather_icon" />

    <TextView
        android:id="@+id/next_weather_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/dummy_weather_temp"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/next_weather_icon"
        app:layout_constraintEnd_toEndOf="@+id/now_weather_text"
        app:layout_constraintStart_toStartOf="@+id/now_weather_text"
        app:layout_constraintTop_toTopOf="@+id/next_weather_icon" />

    <TextView
        android:id="@+id/now_weather_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/degree_fahrenheit"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/now_weather_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/now_weather_text"
        app:layout_constraintTop_toTopOf="@+id/now_weather_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/next_weather_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/degree_fahrenheit"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/next_weather_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/next_weather_text"
        app:layout_constraintTop_toTopOf="@+id/next_weather_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/next_weather_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/next_event"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/updated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/now_weather_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/now_weather_title"
        app:layout_constraintTop_toTopOf="@+id/now_weather_title" />

    <TextView
        android:id="@+id/next_event_identifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/around"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/next_weather_title"
        app:layout_constraintEnd_toStartOf="@+id/next_event_time"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toEndOf="@+id/next_weather_title"
        app:layout_constraintTop_toTopOf="@+id/next_weather_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/next_event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFGText"
        app:layout_constraintBottom_toBottomOf="@+id/next_event_identifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/next_weather_title"
        app:layout_constraintTop_toTopOf="@+id/next_event_identifier" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>
